# ehcsls

./: .gitignore  flake.nix  requirements.txt  setup.cfg
src/ehcsls/: __main__.py  lambdananas.py  server.py
