[metadata]
name = ehcsls
version = 0.0.1
author = Sigmanificient
description = Language Server for the Epitech Coding Style (Haskell)
platform = unix, linux

[options]
include_package_data = True
packages =
    ehcsls
python_requires = >=3.10


package_dir =
    = src
zip_safe = no
install_requires = pygls == 1.0.1

[options.entry_points]
console_scripts =
    ehcsls_run = ehcsls.__main__:main
